Fix for ie 11 main menu shift to the right because unsupported margin:auto

--- a/css/styles.css
+++ b/css/styles.css
@@ -2406,7 +2406,6 @@ a.logo_largeScreens {
     background-color: transparent;
   }
   .nav-group .nav-menu-div {
-    margin: 0 auto;
     position: relative;
     display: -webkit-box;
     display: flex;
@@ -2416,6 +2415,11 @@ a.logo_largeScreens {
     -webkit-box-align: stretch;
             align-items: stretch;
     background-color: #3d5978;
+  }
+  @supports (margin: auto) {
+    .nav-group .nav-menu-div {
+      margin: 0 auto;
+    }
   }
   .nav-group .nav-menu-div .main-menu, .nav-group .nav-menu-div .main-menu-2 {
     display: -webkit-box;
